removed unused styles

--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ img {
 
 
 .todo-list__item {
-    min-height: 7vh;
+    /* min-height: 7vh; */
     position: relative;
     list-style: none;
     padding: 0;
@@ -308,7 +308,7 @@ img {
     align-items: center;
     background-color: var(--primary-color-light);
     position: relative;
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px;
 }
 
 .todo-list__text {
@@ -349,17 +349,11 @@ img {
         justify-content: flex-start;
         margin: 1em 0.5em;
         flex: 1 1 30%;
-        /* box-shadow: 0 0.1em 0.1em rgba(0, 0, 0, 0.2),
-                    0 0.2em 0.2em rgba(0, 0, 0, 0.15),
-                    0 0.3em 0.3em rgba(0, 0, 0, 0.1),
-                    0 0.4em 0.4em rgba(0, 0, 0, 0.075),
-                    0 0.5em 0.5em rgba(0, 0, 0, 0.05),
-                    0 0.6em 0.6em rgba(0, 0, 0, 0.025); */
         position: relative;
     }
 
-    .todo-list__item:before, 
-    .todo-list__item:after {
+    .todo-list__item::before, 
+    .todo-list__item::after {
         z-index: -1;
         position: absolute;
         content: '';
@@ -373,23 +367,11 @@ img {
         transform: rotate(-3deg);
     }
 
-    .todo-list__item:after {
+    .todo-list__item::after {
         left: auto;
         right: 10px;
         transform: rotate(3deg);
     }
-
-    /* .todo-list__item:nth-child(n + 3) {
-        background: #5ac6d5;
-    }
-
-    .todo-list__item:nth-child(2n) {
-        background: #f8c5fe;
-    }
-
-    .todo-list__item:nth-child(2n + 2) {
-        background: #fffd61;
-    } */
 
     .todo-list__text {
         max-width: 100%;
