--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
     font-weight: 300;
     line-height: 1.6;
     margin: 0;
+    height: 100vh;
 }
 
 img {
@@ -75,7 +76,6 @@ header {
     list-style: none;
     letter-spacing: 0.045em;
 }
-
 
 .navbar__tabs a {
     padding: .25em 0;
@@ -165,13 +165,9 @@ nav a:hover {
     Layout
 ==================== */
 
-.app {
-    margin: 0 auto;
-}
-
 .container {
     width: 90%;
-    max-width: 1400x;
+    max-width: 1400px;
     margin: 0 auto;
 }
 
@@ -200,7 +196,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.25em 0.5em;
+    padding: 0.75em 0.25em 0.25em;
+    height: 22.5%;
 }
 
 .date {
@@ -221,7 +218,8 @@ header {
 }
 
 .current-page {
-    border-bottom: 1px solid #707070;
+    border-bottom: 2px solid #707070;
+    border-radius: 1.5px;
 }
 
 .navbar__tabs {
@@ -229,6 +227,14 @@ header {
     display: flex;
     flex-direction: column;
     cursor: pointer;
+}
+
+.navbar__tab--active {
+    margin-bottom: 1em;
+}
+
+.navbar__tab--completed {
+    margin-bottom: 0.75em;
 }
 
 @media (min-width: 600px) {
@@ -255,9 +261,14 @@ header {
     layout.main
 ------------------ */
 
+main {
+    height: 77.5%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+}
+
 .main-content {
-    min-height: 85vh;
-    max-height: 360px;
     overflow: auto;
     scrollbar-width: thin;
     scrollbar-color: #cdcdcd transparent;
@@ -295,7 +306,7 @@ header {
 
 .todo-list__item {
     min-height: 7vh;
-    max-width: 600px;
+    /* max-width: 600px; */
     word-wrap: break-word;
     position: relative;
     list-style: none;
@@ -304,17 +315,17 @@ header {
     /* transition: border 0.5s, background 0.5s; */
     display: flex;
     align-items: center;
+    justify-content: center;
     background-color: var(--primary-color-light);
     position: relative;
     transition: 1s;
 }
 
 .todo-list__text {
-    padding: 1em 0;
+    padding: 0.75em 1em;
     margin: 0;
-    margin-left: 0.75em;
     background: inherit;
-    max-width: 77.5%;
+    max-width: 85%;
 }
 
 .todo-list__circle-icon {
@@ -397,14 +408,10 @@ header {
     position: relative;
     background-color: #F8F8F8;
     padding: 10px;
-    width: 50vw;
-    min-width: 50vw;
-    border-radius: 30px;
 }
 
 .item-adder__input {
     flex: 1;
-    
     border: 0;
     margin-right: auto;
 }
