--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,6 @@ nav a:hover {
     font-family: 'Ubuntu', sans-serif;
     font-size: 1.25rem;
     color: #707070;
-    width: 100%;
     cursor: pointer
 }
 
@@ -183,7 +182,7 @@ nav a:hover {
 ------------------ */
 
 header {
-    background-color: #F8F8F8;
+    background-color: #E8E8E8;
     background-size: cover;
     background-position: center;
     position: relative;
@@ -297,8 +296,15 @@ main {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: flex-start;
-        padding-top: 0.5em;
+        /* align-items: flex-start; */
+        /* padding-top: 0.5em; */
+    }
+
+    
+    .todo-list__item {
+        max-width: 45%;
+        flex: 1 1 100%;
+        border-radius: 10px;
     }
 }
 
@@ -310,15 +316,15 @@ main {
     content: attr(data-text);
 }
 
-.todo-list__item {s
+.todo-list__item {
     position: relative;
     list-style: none;
 }
 
 .todo-list__text {
     padding: 0.75em 1em;
-    margin: 0;
-    background-color: whitesmoke;
+    margin: 1em;
+    background-color: #E8E8E8;
     box-shadow: 2px 3px 10px -5px rgba(0, 0, 0, 0.2);
 }
 
@@ -351,13 +357,6 @@ main {
         height: 88%;
     }
 
-    .todo-list__item {
-        flex: 1 1 100%;
-        max-width: 30%;
-        margin: 0.75em;
-        border-radius: 10px;
-    }
-
     .todo-list__text::before, 
     .todo-list__text::after {
         z-index: -1;
@@ -380,6 +379,11 @@ main {
     .todo-list__text {
         position: relative;
         word-break: break-word;
+        margin: 0;
+    }
+
+    .todo-list__item {
+        margin: 0.75em;
     }
 }
 
@@ -393,7 +397,7 @@ main {
     align-items: center;
     position: absolute;
     width: 100%;
-    background-color: #F8F8F8;
+    background-color: #E8E8E8;
     padding: 10px;
     bottom: 0;
     z-index: 1;
@@ -464,6 +468,10 @@ main {
     .container {
         width: 100%;
         max-width: 1700px;
+    }
+
+    .todo-list__item {
+        max-width: 30%;
     }
 }
 
